--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
+    "bootstrap": "^5.3.3",
     "cypress": "^13.12.0",
     "eslint": "^8.57.0",
     "eslint-plugin-cypress": "^3.3.0",
@@ -37,6 +38,7 @@
     "jsdom": "^24.1.0",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.2.5",
+    "sass": "^1.77.8",
     "start-server-and-test": "^2.0.4",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
