--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "dayjs": "^1.11.12",
     "pinia": "^2.1.7",
+    "uuid": "^10.0.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
