--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "npm run svg-sprite && run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:unit": "vitest",
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
-    "build-only": "vite build",
+    "build-only": "npm run svg-sprite && vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "svg-sprite": "node ./scripts/writeSvgSprites.js && node ./scripts/writeIconList.js"
   },
   "dependencies": {
     "dayjs": "^1.11.12",
@@ -43,6 +44,7 @@
     "prettier": "^3.2.5",
     "sass": "^1.77.8",
     "start-server-and-test": "^2.0.4",
+    "svg-symbol-sprite": "^1.5.2",
     "typescript": "~5.4.0",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1",
